Second Commit after response

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,4 +7,5 @@ body {
   min-width: 320px;
   min-height: 100vh;
   background-image: url('bg_img.png');
+  background: linear-gradient(45deg , #bfdbfe, #facc15);
 }
